[package]
name = "contraband_diesel"
description = "Contraband module for Diesel"
version = "0.1.0"
authors = ["Buster Styren <buster.styren@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/contraband_diesel/"
homepage = "https://docs.rs/contraband_diesel/"

[dependencies]
r2d2 = "0.8.8"
diesel = { version = "1.4.4", features = ["postgres", "sqlite", "r2d2", "uuid"] }
contraband = "^0.1.0"
diesel_migrations = "1.4.0"
